--- a/playbooks/disable_firewalld.yml
+++ b/playbooks/disable_firewalld.yml
@@ -1,10 +1,10 @@
 ---
 - name: Disable firewalld
   hosts: homelan
-  become: yes
+  become: true
   tasks:
     - name: Stop and disable firewalld service
       ansible.builtin.service:
         name: firewalld
         state: stopped
-        enabled: no
+        enabled: false
