--- a/playbooks/disable_selinux.yml
+++ b/playbooks/disable_selinux.yml
@@ -1,7 +1,7 @@
 ---
 - name: Disable SELinux
   hosts: homelan
-  become: yes
+  become: true
   tasks:
     - name: Disable SELinux
       ansible.posix.selinux:
